# gpxsam

./: Cargo.toml
src/: main.rs
src/gui/: chunk_plotter.rs  mod.rs
src/lib/: chunk.rs  config.rs  geom_utils.rs  intersection.rs  mod.rs  segment.rs  segment_splitter.rs
tests/join_intersection/: 1.gpx  2.gpx
tests/self_intersection/: 1.gpx
tests/simple_intersection/: 1.gpx
tests/simple_intersection_1/: 2.gpx
tests/simple_intersection_2/: 1.gpx  2.gpx  3.gpx
